updated the pictures

--- a/src/pages/jobs.astro
+++ b/src/pages/jobs.astro
@@ -33,7 +33,7 @@ const jobs = jobsJSON.items.map((item) => {
 <Layout description="See all the current job postsings at Heritage Consultants." pageForHeader="employment" title="Work at Heritage Consultants">
     <section id="jobs"> 
         <h1>Work At Heritage</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Heritage Consultants, LLC is a leading firm in the Northeast, and we provide our customers with the full range of archaeological, geophysical, historical, and architectural history services. Our work is completed to the highest standards of excellence and is routinely praised by our customers and regulatory agencies. Heritage is committed to fostering passion and interest in the various aspects of historic preservation. We encourage all of our employees to engage in archaeology wherever the opportunity arises. Many of our staff routinely attend regional and national meetings and conferences, where they give papers, presentations, and poster sessions related to the work completed by Heritage. We also actively promote research in historic preservation outside the work force and offer scholarships for our employees seeking to gain M.A. or Ph.D. degrees.</p>
         <h2>Our Current Opennings</h2>
         <div id="jobs--postings">
         {    
