--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -15,10 +15,13 @@ import Layout from '../layouts/Layout.astro';
                 <p class="overlay--text" id="overlay--text--6"><strong>Nita Vitaliano, M.A. -</strong>Ms. Vitaliano serves as a Historian at Heritage Consultants.  Originally from Massachusetts, she relocated to Connecticut for high school and attended the University of Connecticut, earning a Bachelor of Arts in both History and Anthropology. Ms. Vitaliano continued for a M.A. in History at UConn and spent years teaching, traveling, and continuing my adventures. I am passionate about connecting history to current events and 21st century concerns.</p>
                 <p class="overlay--text" id="overlay--text--7"><strong>Stephanie Scialo, B.A. -</strong>Ms. Stephanie Scialo is a Project Archaeologist with nine years of cultural resource management experience in New England, New York, and Pennsylvania. She is currently a doctoral student at the University of Connecticut with a focus in North American archaeology, lithic technologies and collections analysis.</p>
                 <p class="overlay--text" id="overlay--text--8"><strong>Linda Seminario, B.A. -</strong>Ms. Linda Seminario is a Project Archaeologist and Archaeobotanical Analyst at Heritage Consultants.  She earned her Bachelor of Arts in Archaeology and Anthropology from Boston University and is currently a graduate student in the Historical Archaeology program at the University of Massachusetts, Boston.  Her research interests include the impacts of colonialism and African diaspora archaeology.</p>
-                <p class="overlay--text" id="overlay--text--9"><strong>Sean Buckley, B.A. -</strong>Mr. Buckley serves as GIS Director at Heritage Consultants…</p>
+                <p class="overlay--text" id="overlay--text--9"><strong>Sean Buckley, B.A. -</strong>Mr. Buckley studied archaeology at Boston University from 2016 to 2019, and is currently pursuing a Master of Professional Science degree at Unity College. At Heritage, Sean serves as the GIS Director, where he manages all geospatial data, as well as GIS personnel. </p>
                 <p class="overlay--text" id="overlay--text--10"><strong>Tevin Jourdain, B.A. -</strong>Mr. Tevin Jourdain is a Historian & GIS Specialist at Heritage Consultants, he attended the Norwich Free Academy and is a graduate of Central Connecticut State University, where he earned a bachelor's degree in history with a concentration in African American studies. While at Central Connecticut State University. Before joining Heritage, Mr. Jourdain worked at the Old Newgate Prison in East Granby, Connecticut, a Revolutionary War era prison that was formerly a copper mine. During his tenure at the Museum, he assisted with the identification and inventorying of historic cultural material collected from the prison grounds and Viet's Tavern, which was located across the street from the prison. Mr. Jourdain mentors young African American men. This affords him many opportunities to engage with the public and the local community in Hartford through event such The Boar's Head Festival, an annual music and theater production hosted in the oldest church in Hartford, as well the Weekly Choir Ensemble at the Immanuel Congregational Church in Hartford. While not directly related to his historical research skills, these volunteer efforts showcase Mr. Jourdain's commitment to youth development and community outreach.</p>
                 <p class="overlay--text" id="overlay--text--11"><strong>Susannah Goeters, B.A. -</strong>Ms. Susannah Goeters holds a Bachelor of Arts degree in Biological Anthropology from Southern Connecticut State University, where she graduated summa cum laude in 2021. Her research interests include historical archaeology and human osteology.</p>
                 <p class="overlay--text" id="overlay--text--12"><strong>Erica Lang, B.A. -</strong>Ms. Erica Lang earned her Bachelor of Arts degree from Hofstra University in Anthropology, Sociology, and Women's Studies. She is currently a graduate student in Historical Archaeology at the University of Massachusetts Boston. She specializes in 18th and 19th century material culture and her research is focused on the intersections between race, gender, and class in everyday, lived experiences.</p>
+                <p class="overlay--text" id="overlay--text--13"><strong>Elise Manning-Sterling -</strong></p>
+                <p class="overlay--text" id="overlay--text--14"><strong>Cole Peterson -</strong>Mr. Peterson, a Connecticut native, received a B.A. in History and Economics from Bard College at Simon's Rock in 2021. He has worked in archaeology in New England since then, with experience in both field and laboratory settings. His research interests include the 17th century in the Native Northeast, coastal geoarchaeology, marine shell analysis, and improving the use of non-invasive survey methods within a cultural resource management context.</p>
+                <p class="overlay--text" id="overlay--text--15"><strong>Jeffrey Brown -</strong></p>
             </div>
     </div>
     <section id="team">
@@ -37,30 +40,33 @@ import Layout from '../layouts/Layout.astro';
             <div class="managers--title"><img data-p="2" role="button" src="/HC-AntonioMedina.webp" alt="Picture of Antonio Medina" height="500" width="500"><h2>Antonio Medina, B.A.</h2></div>
             <div class="managers--title"><img data-p="3" role="button" src="/HC-DanielZoto.webp" alt="Picture of Daniel Zoto" height="500" width="500"><h2>Daniel Zoto, M.A., RPA</h2></div>
             <div class="managers--title"><img data-p="4" role="button" src="/HC-BrennaPisanelli.webp" alt="Picture Brenna Pisanelli" height="500" width="500"><h2>Brenna Pisanelli, M.A.</h2></div>
-         </div> 
+            <div class="managers--title"><img data-p="13" role="button" src="/HC-EliseManningSterling.webp" alt="Picture of Elise Manning-Sterling" height="500" width="500"><h2>Elise Manning-Sterling</h2></div>
+        </div> 
+        <div id="gis" class="blue">
+            <h2>GIS Department</h2>
+            <div class="managers--title"><img data-p="9" role="button" src="/HC-SeanBuckley.webp" alt="Picture of Sean Buckley, B.A." height="500" width="500"><h2>Sean Buckley, B.A.</h2></div>
+            <div class="managers--title"><img data-p="10" role="button" src="/HC-TevinJourdain.webp" alt="Picture of Tevin Jourdain, B.A." height="500" width="500"><h2>Tevin Jourdain, B.A.</h2></div>
+            <div class="managers--title"><img data-p="14" role="button" src="/HC-ColePeterson.webp" alt="Picture of Cole Peterson" height="500" width="500"><h2>Cole Peterson</h2></div>
+            <div class="managers--title"><img data-p="15" role="button" src="/HC-JeffreyBrown.webp" alt="Picture of Jeffrey Brown" height="500" width="500"><h2>Jeffrey Brown</h2></div>    
+        </div>
         <div id="twoSectionsWide">
-            <div id="history">
+            <div id="history"  class="blue">
                 <h2>History Department</h2>
                 <div class="twoWide--title"><img data-p="5" role="button" src="/HC-DavidNaumec.webp" alt="Picture of David Naumec" height="500" width="500"><h2>David Naumec, Ph.D.</h2></div>
                 <div class="twoWide--title"><img data-p="6" role="button" src="/HC-NitaVitaliano.webp" alt="Picture of Nita Vitaliano" height="500" width="500"><h2>Nita Vitaliano, M.A.</h2></div>
             </div>
-            <div id="divContain1"><div id="divider1"></div></div>     
-            <div id="arch" >
+            <div id="divContain2"><div id="divider2"></div></div>     
+            <div id="arch"  class="blue">
                 <h2>Project Archaeologists</h2>
                 <div class="twoWide--title"><img data-p="7" role="button" src="/HC-StephanieScialo.webp" alt="Picture of Stephanie Scialo, B.A." height="500" width="500"><h2>Stephanie Scialo, B.A.</h2></div>
                 <div class="twoWide--title"><img data-p="8" role="button" src="/HC-LindaSeminario.webp" alt="Picture of Linda Seminario, B.A." height="500" width="500"><h2>Linda Seminario, B.A.</h2></div>
-            </div>
-            <div id="gis" class="blue">
-                <h2>GIS Department</h2>
-                <div class="twoWide--title"><img data-p="9" role="button" src="/HC-SeanBuckley.webp" alt="Picture of Sean Buckley, B.A." height="500" width="500"><h2>Sean Buckley, B.A.</h2></div>
-                <div class="twoWide--title"><img data-p="10" role="button" src="/HC-TevinJourdain.webp" alt="Picture of Tevin Jourdain, B.A." height="500" width="500"><h2>Tevin Jourdain, B.A.</h2></div>
-            </div>
-            <div id="divContain2"><div id="divider2"></div></div>
-            <div id="lab" class="blue">
+            </div> 
+            <div id="lab">
                 <h2>Laboratory Department</h2>
                 <div class="twoWide--title"><img data-p="11" role="button" src="/HC-SusannahGoeters.webp" alt="Picture of Susannah Goeters, B.A." height="500" width="500"><h2>Susannah Goeters, B.A.</h2></div>
                 <div class="twoWide--title"><img data-p="12" role="button" src="/HC-EricaLang.webp" alt="Picture of Erica Lang, B.A." height="500" width="500"><h2>Erica Lang, B.A.</h2></div>
             </div>
+            <div id="divContain1"><div id="divider1"></div></div>  
         </div> 
     </section>
 </Layout>
@@ -141,15 +147,21 @@ import Layout from '../layouts/Layout.astro';
         padding: 0px 48px 32px 48px;
     }
     .leadership--title , .managers--title{
-        width:100%;
         position: relative;
         aspect-ratio: 1;
+        max-width: 400px;
+        justify-self: center;
+        margin-bottom:16px;
+
     }
     .leadership--title > img ,  .managers--title > img{
         max-height: 100%;
         max-width: 100%;
         width: 100%;
-
+    
+    }
+    .leadership--title > img {
+        border:4px solid #0063A7;
     }
     .leadership--title > h2 {
         position: absolute;
@@ -173,18 +185,27 @@ import Layout from '../layouts/Layout.astro';
         padding-top: 16px;
     }
 
-    #projectManagers{
+    #projectManagers , #gis{
         background-color: #0063A7;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(5 , 1fr);
         column-gap: 32px;
         padding: 160px 48px 80px 48px;
         width: 100%;
         max-width: 100%;
         position: relative;
         align-items: stretch;
+        justify-items: center;
     }
-    #projectManagers > h2 {
+    #gis { 
+        background-color: #fff;
+        grid-template-columns: repeat(4 , 1fr);
+    }
+    #gis > div {
+        max-width: 295px;
+    }
+
+    #projectManagers > h2 ,  #gis > h2{
         color:#0063A7;
         background-color: #fff;
         padding: 16px 32px 16px 10%;
@@ -195,6 +216,15 @@ import Layout from '../layouts/Layout.astro';
         font-size: 3rem;
         font-weight: 700;
         margin:0;
+    }
+    #gis > h2{ 
+        background-color: #0063A7;
+        color:#fff;
+    }
+
+    #gis > div > h2 {
+        background-color: #0063A7 ;
+        color:#fff;
     }
     .managers--title {
     }
@@ -222,7 +252,11 @@ import Layout from '../layouts/Layout.astro';
         grid-template-columns: 1fr 1fr;
         position: relative;
         padding: 160px 48px 80px 48px;
-        gap:48px;
+        gap: 48px;
+        justify-items: center;
+    }
+    #twoSectionsWide > div > div {
+        max-width: 295px;
     }
     #twoSectionsWide > div > h2 {
         color:#fff;
@@ -259,6 +293,14 @@ import Layout from '../layouts/Layout.astro';
     .blue {
         background-color: #0063A7;
         color:#fff;
+    }
+    #twoSectionsWide > #history > h2 {
+        padding: 16px 10% 16px 32px;
+        background-color:#fff;
+        color: #0063A7;
+        right: auto;
+        left:0;
+        margin:0;
     }
     #twoSectionsWide > .blue > h2 {
         padding: 16px 10% 16px 32px;
@@ -302,8 +344,7 @@ import Layout from '../layouts/Layout.astro';
         right:auto;
         padding: 16px 32px 16px 10%;
     }
-
-    #twoSectionsWide > #lab > h2 ,  #twoSectionsWide > #arch > h2 {
+  #twoSectionsWide > #arch > h2 {
         right: 0px;
         left:auto;
         padding: 16px 10% 16px 32px;
@@ -358,7 +399,7 @@ import Layout from '../layouts/Layout.astro';
         .leadership--bio:nth-of-type(2){
             grid-row-start: 4;
         }
-        #projectManagers {
+        #projectManagers , #gis {
             grid-template-columns: 1fr 1fr;
             row-gap: 48px;
         }
@@ -367,17 +408,17 @@ import Layout from '../layouts/Layout.astro';
         }
     }
     @media only screen and (max-width: 500px) { 
-        #projectManagers {
+        #projectManagers , #gis {
             grid-template-columns: 1fr;
             row-gap: 24px;
         }
-        #projectManagers > h2 {
+        #projectManagers > h2 , #gis > h2{
             font-size: 2.2rem;
         }
         #twoSectionsWide {
             grid-template-columns: 1fr;
         }
-        #gis {
+        #lab {
             grid-row: 2 / 3;
         }
         #twoSectionsWide > #lab > h2 , #twoSectionsWide > #arch > h2 {
