Added fall backs for SVH

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -208,6 +208,7 @@ links.forEach(link => {
         left: -100%;
         display:none;
         width:100%;
+        height:calc(100vh); 
         height:calc(100svh - 71px); 
         background: #fff;
         backdrop-filter: blur(10px);
