--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -93,6 +93,7 @@ import Layout from '../layouts/Layout.astro';
         overflow-y: auto;
         overflow-x: hidden;
         margin-top:73px;
+        max-height: calc(100vh - 73px);
         max-height: calc(100svh - 73px);
         
     }
@@ -370,6 +371,7 @@ import Layout from '../layouts/Layout.astro';
             background-color: #efefef;
             border: 8px solid #0063A7;
             max-width: calc(100% - 8px);
+            max-height: calc(100vh - 90px);
             max-height: calc(100svh - 90px);
             position: relative;
             /* align-self: flex-end; */
