--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,6 +16,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: calc(100vh - 180px);
         height:calc(100svh - 90px);
         width:100vw;
         background-color: #FFF;
@@ -87,6 +88,7 @@
 
     @media only screen and (max-width: 700px) { 
         #hero{
+            height: calc(100vh - 140px);
             height:calc(100svh - 70px);
         }
         #hero > h1 {
@@ -106,6 +108,7 @@
 
     @media only screen and (max-height: 400px) { 
         #hero{
+            height: calc(100vh - 70px);
             height:calc(100svh - 70px);
         }
         #hero > h1 {
