added model viewer

--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -69,6 +69,8 @@ const {page} = Astro.props;
         </nav>
 </Layout>
 
+<script type="module" src="/scripts/model-viewer.min.js"></script>
+
 <style>
     .posts{
         padding: 24px 0px 0px 0px;
