--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -14,7 +14,13 @@ export async function getStaticPaths() {
 
   function renderImage(node){
     let data = node.data.target.fields
-    return `<img src="https://${data.file.url}?&w=1100&fm=webp" alt="${data.description}"><figcaption>${data.description}</figcaption>`
+    if(data.file.contentType == "model/gltf-binary"){
+      return`<figure><model-viewer src="https:${data.file.url}" alt="${data.description}" style="width:100%; height:50vh; border:1px solid #0063A7;"  camera-controls shadow-intensity="1" auto-rotate>
+        </model-viewer><figcaption>${data.description}</figcaption></figure>`
+    } else {
+      return `<figure><img src="https://${data.file.url}?&w=1100&fm=webp" alt="${data.description}"><figcaption>${data.description}</figcaption></figure>`
+    }
+    
   }
 
 
@@ -60,6 +66,8 @@ const cssURL = `url(/${imageUrl}?w=1100)`;
         <p>Posted on {date} Copyright Heritage Consultants, LLC</p>
       </div> 
 </Layout>
+
+<script type="module" src="/scripts/model-viewer.min.js"></script>
 
 <style define:vars={{cssURL}}>
   body {
@@ -134,8 +142,9 @@ const cssURL = `url(/${imageUrl}?w=1100)`;
     flex-direction: column;
     align-items: center;
     text-align: left;
-    margin-top:2em;
+    /* margin-top:2em; */
     position: relative;
+    margin-top:16px;
   }
 
   .post > .content :global(figure > img){
