--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -15,7 +15,7 @@ export async function getStaticPaths() {
   function renderImage(node){
     let data = node.data.target.fields
     if(data.file.contentType == "model/gltf-binary"){
-      return`<figure><model-viewer src="https:${data.file.url}" alt="${data.description}" style="width:100%; height:50vh; border:1px solid #0063A7;"  camera-controls shadow-intensity="1" auto-rotate>
+      return`<figure><model-viewer src="https:${data.file.url}" alt="${data.description}" style="width:100%; height:50vh; border:1px solid #0063A7; background-color:#000;"  camera-controls shadow-intensity="1" auto-rotate>
         </model-viewer><figcaption>${data.description}</figcaption></figure>`
     } else {
       return `<figure><img src="https://${data.file.url}?&w=1100&fm=webp" alt="${data.description}"><figcaption>${data.description}</figcaption></figure>`
