--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
     <div id="overlay">
         <div id="overlay--contain">
             <button id="overlay--button">x</button>
-                <p class="overlay--text" id="overlay--text--1"><strong>Renee Petruzelli, M.A. -</strong> Ms. Renee Petruzelli serves as Project Manager at Heritage Consultants. She earned a Master's Degree in  Anthropology from the University of Connecticut and is a Registered Professional Archaeologist. She has considerable experience in the areas of zooarchaeology, lithic and precontact era ceramic studies, eighteenth and nineteenth century material culture analysis, and artifact conservation techniques. Ms. Petruzelli routinely completes projects throughout Connecticut, Massachusetts, Rhode Island, New Hampshire, and New York. including roadway improvement efforts, bridge replacements, solar centers, large and small electrical transmission and distribution projects, and other infrastructural endeavors, as well as many private development projects.</p>
+                <p class="overlay--text" id="overlay--text--1"><strong>Brenna Pisanelli, M.A. -</strong> Ms. Pisanelli, a Senior Project Manager at Heritage Consultants, graduated from Roger Williams University in 2017 with a Bachelor of Science in Historic Preservation and a Bachelor of Arts in Anthropology & Sociology as well as Art & Architectural History. She earned her Master of Arts degree in American Studies from Brown University in 2019. Working from an interdisciplinary lens, her research focuses on how concepts surrounding authenticity and historical narrative impact the construction of cultural identities and sense of place, and how this informs our preservation practices. She believes in the importance of public outreach and creating visibility and accessibility within the industry.</p>
                 <p class="overlay--text" id="overlay--text--2"><strong>Antonio Medina, B.A. -</strong> Mr. Antonio Medina serves as Senior Archaeologist and Operations Manager at Heritage Consultants. He earned a Bachelor of Arts degree in Anthropology from Hartwick College in 1993 and has supervised dozens of cultural resources management projects in Maine, Vermont, New Hampshire, Connecticut, Rhode Island, Massachusetts, and New York. He has extensive experience working on electric transmission projects, natural gas, wind, solar, and other infrastructure improvement projects such as airports, railway lines, and highways.</p>
                 <p class="overlay--text" id="overlay--text--3"><strong>Daniel Zoto, M.A., RPA -</strong> Mr. Zoto serves as a Project Manager at Heritage Consultants and has more than 12 years of professional experience in New England archaeology. He holds an M.A. from the University of Connecticut and a B.A. from the University of Massachusetts, Amherst. He is a Registered Professional Archaeologist (RPA# 5123). Dan has worked on more than 125 cultural resources projects and has been the lead or co-author on more than 50 technical reports associated with these projects. He specializes in lithic analysis, field methods, and public outreach.</p>
                 <p class="overlay--text" id="overlay--text--5"><strong>David Naumec, Ph.D. -</strong> Dr. David Naumec serves as Historian at Heritage Consultants. He specializes in military history and has participated in dozens of very important projects across the region related to seventeenth through early nineteenth eighteenth century battles, including those related to the Pequot War, King Philips War, the Revolutionary War, and the War of 1812. Dr. Naumec's areas of expertise include historical research, curation, collections management, and archival practices. His main research interests include Early American social history, New England history, Native and African-American history, Military history, and genealogical research.</p>
@@ -23,6 +23,7 @@ import Layout from '../layouts/Layout.astro';
                 <p class="overlay--text" id="overlay--text--15"><strong>Jeffrey Brown -</strong> Jeffrey Brown is a highly skilled GIS specialist with a passion for history. As a valued member of the team at Heritage Consultants, he leverages his expertise in Geographic Information Systems to provide innovative solutions for a wide range of clients.  Jeffrey graduated from the esteemed University of Massachusetts Amherst with a Bachelor of Science degree, where he eagerly filled his electives with GIS courses to further hone his skills. With an unwavering interest in history, Jeffrey was thrilled to join Heritage Consultants and work on projects that allow him to explore the past through the lens of GIS. He takes great pride in his work, ensuring that each project is executed with the utmost precision and attention to detail.</p>
                 <p class="overlay--text" id="overlay--text--16"><strong>Sam Spitzschuh B.A. -</strong> Mr. Spitzschuh studied Anthropology and History at the University of Connecticut from 2014 to 2018 and has been working in the cultural resource industry since then. At Heritage Sam has worked in the field on a variety of projects over the years and loves excavating Native American archaeological sites, traveling throughout the northeast, and learning about  lithic technology  in the area.</p> 
                 <p class="overlay--text" id="overlay--text--17"><strong>Fiona Jones -</strong> Ms. Jones received her B.A. in biological anthropology with a minor in law from the University at Buffalo in 2021. She has extensive archaeological experience in cultural resource management and public archaeology in New England beginning in 2016. Fiona dedicated some of her undergraduate studies to GIS and began working with Dr. Leslie in 2020. In addition to her work at Heritage as a Geophysical Specialist, Fiona works for the University of Rhode Island's Department of Anthropology as a repatriation coordinator. Her interests include decolonization and human rights as they apply to archaeology and geophysical sciences.</p>
+                <p class="overlay--text" id="overlay--text--18"><strong>Eric Heffter, Ph.D. -</strong> Dr. Heffter, a Senior Project Manager at Heritage Consultants, has over 15 years of experience studying the archaeology of North America and Central and Southeastern Europe.  A former Fulbright Scholar, Eric earned his Ph.D. in Anthropology from the University of Arizona in 2021.  His dissertation focused on population movements in Southeastern Europe and the Balkans during the Early Upper Paleolithic.  He has spent the past several years working in cultural resources management in New England, including on several large-scale data recovery programs.  His research interests include GIS analysis, geoarchaeology and lithic analysis.</p>
             </div>
     </div>
     <section id="team">
@@ -33,56 +34,57 @@ import Layout from '../layouts/Layout.astro';
             <p class="leadership--bio">David George is President & CEO of Heritage Consultants. He has over 30 years of experience in cultural resources management and has directed over 3,000 projects throughout the Nation, with an emphasis on New England and New York. Mr. George holds an M.A. in Anthropology from the University of Connecticut and is a National Park Service 36 CFR 61-qualified archaeologist. He has completed projects on behalf of hundreds of clients and understands the intricacies of the cultural resources management process.<br><a href="mailto:DGEORGE@HERITAGE-CONSULTANTS.COM">DGeorge@Heritage-Consultants.com</a></p>
             <p class="leadership--bio">Mr. William F. Keegan serves as Vice President and Historical Geographer at Heritage Consultants. He received his Bachelor of Arts degree in Anthropology from the University of Connecticut in 1996. He is a co-founder of the company and he specializes in archival, genealogical, and historical research, as well as Geographic Information Systems applications in archeology, specifically historic landscape reconstruction and fatal flaws analysis.<br><a href="mailto:wkeegan@heritage-consultants.com">WKeegan@Heritage-Consultants.com</a></p>
             <div class="leadership--title"><img src="/HC-DavidLeslie.webp" alt="Headshot of David Leslie Ph.D." height="500" width="500"><h2>David Leslie, Ph.D., RPA</h2></div>
-            <div class="leadership--title"><img src="/HC-BrennaPisanelli.webp" alt="Headshot of Breanna Pisanelli." height="500" width="500"><h2>Brenna Pisanelli, M.A.</h2></div>
-            <p class="leadership--bio">Dr. Leslie is the Director of Research at Heritage Consultants and has over 20 years of archaeological experience.  He is a geoarchaeologist and lithic specialist, and earned his Ph.D. in Anthropology at the University of Connecticut.  He has worked at all levels of archaeology and spent the last eight years as a Principal Investigator in the Northeast, designing and implementing all phases of archaeological survey and recovery, including geophysical and geoarchaeological investigations.  His work has been published in peer-reviewed journals such as Science, PaleoAmerica, Archaeology of Eastern North America, and Northeast Anthropology.<br><a href="mailto:DLESLIE@HERITAGE-CONSULTANTS.COM">DLeslie@Heritage-Consultants.com</a></p>
-            <p class="leadership--bio">Ms. Pisanelli, a Senior Project Manager at Heritage Consultants, graduated from Roger Williams University in 2017 with a Bachelor of Science in Historic Preservation and a Bachelor of Arts in Anthropology & Sociology as well as Art & Architectural History. She earned her Master of Arts degree in American Studies from Brown University in 2019. Working from an interdisciplinary lens, her research focuses on how concepts surrounding authenticity and historical narrative impact the construction of cultural identities and sense of place, and how this informs our preservation practices. She believes in the importance of public outreach and creating visibility and accessibility within the industry.</p>
-            <div class="leadership--title"><img src="/HC-EricHeffter.webp" alt="Headshot of Eric Heffter Ph.D." height="500" width="500"><h2>Eric Heffter, Ph.D.</h2></div>
-            <div class="leadership--title"></div>
-            <p class="leadership--bio">Dr. Heffter, a Senior Project Manager at Heritage Consultants, has over 15 years of experience studying the archaeology of North America and Central and Southeastern Europe.  A former Fulbright Scholar, Eric earned his Ph.D. in Anthropology from the University of Arizona in 2021.  His dissertation focused on population movements in Southeastern Europe and the Balkans during the Early Upper Paleolithic.  He has spent the past several years working in cultural resources management in New England, including on several large-scale data recovery programs.  His research interests include GIS analysis, geoarchaeology and lithic analysis.   </p>
-            <p class="leadership--bio"></p>
+            <div class="leadership--title empty"></div>
+            <p class="leadership--bio ">Dr. Leslie is the Director of Research at Heritage Consultants and has over 20 years of archaeological experience.  He is a geoarchaeologist and lithic specialist, and earned his Ph.D. in Anthropology at the University of Connecticut.  He has worked at all levels of archaeology and spent the last eight years as a Principal Investigator in the Northeast, designing and implementing all phases of archaeological survey and recovery, including geophysical and geoarchaeological investigations.  His work has been published in peer-reviewed journals such as Science, PaleoAmerica, Archaeology of Eastern North America, and Northeast Anthropology.<br><a href="mailto:DLESLIE@HERITAGE-CONSULTANTS.COM">DLeslie@Heritage-Consultants.com</a></p>
+            <p class="leadership--bio empty"></p>
         </div>
-        <div id="operations" class="blue">
+        <div id="SRprojectManagers"class="blue" >
+            <h2>Senior Project Managers</h2>
+            <div class="managers--title"><img data-p="1" role="button" src="/HC-BrennaPisanelli.webp" alt="Picture of Breanna Pisanelli." height="500" width="500"><h2>Brenna Pisanelli, M.A.</h2></div>
+            <div class="managers--title"><img data-p="18" role="button" src="/HC-EricHeffter.webp" alt="Picture of Eric Heffter Ph.D. " height="500" width="500"><h2>Eric Heffter, Ph.D.</h2></div>
+        </div> 
+        <div id="operations" class="white">
             <h2>Operations Manager</h2>
             <div class="managers--title"><img data-p="2" role="button" src="/HC-AntonioMedina.webp" alt="Picture of Antonio Medina" height="500" width="500"><h2>Antonio Medina, B.A.</h2></div>
         </div>
-        <div id="projectManagers"class="white" >
+        <div id="projectManagers"class="blue" >
             <h2>Project Managers</h2>
-            <div class="managers--title"><img data-p="1" role="button" src="/HC-ReneePetruzelli.webp" alt="Picture of Renee Petruzelli" height="500" width="500"><h2>Renee Petruzelli, M.A.</h2></div>
             <div class="managers--title"><img data-p="3" role="button" src="/HC-DanielZoto.webp" alt="Picture of Daniel Zoto" height="500" width="500"><h2>Daniel Zoto, M.A., RPA</h2></div>
             <div class="managers--title"><img data-p="13" role="button" src="/HC-EliseManningSterling.webp" alt="Picture of Elise Manning-Sterling" height="500" width="500"><h2>Elise Manning-Sterling, M.A.</h2></div>
         </div> 
-        <div id="gis" class="blue">
+        <div id="gis" class="white">
             <h2>GIS Department</h2>
             <div class="managers--title"><img data-p="9" role="button" src="/HC-SeanBuckley.webp" alt="Picture of Sean Buckley, B.A." height="500" width="500"><h2>Sean Buckley, B.A.</h2></div>
             <div class="managers--title"><img data-p="10" role="button" src="/HC-TevinJourdain.webp" alt="Picture of Tevin Jourdain, B.A." height="500" width="500"><h2>Tevin Jourdain, B.A.</h2></div>
             <div class="managers--title"><img data-p="15" role="button" src="/HC-JeffreyBrown.webp" alt="Picture of Jeffrey Brown" height="500" width="500"><h2>Jeffrey Brown</h2></div>    
         </div>
-        <div id="arch"  class="white">
+        <div id="arch"  class="blue">
             <h2>Project Archaeologists</h2>
             <div class="managers--title"><img data-p="7" role="button" src="/HC-StephanieScialo.webp" alt="Picture of Stephanie Scialo, B.A." height="500" width="500"><h2>Stephanie Scialo, B.A.</h2></div>
             <div class="managers--title"><img data-p="8" role="button" src="/HC-LindaSeminario.webp" alt="Picture of Linda Seminario, B.A." height="500" width="500"><h2>Linda Seminario, M.A.</h2></div>
             <div class="managers--title"><img data-p="16" role="button" src="/HC-SamSpitzchuh.webp" alt="Picture of Sam Spitschuh, B.A." height="500" width="500"><h2>Sam Spitschuh, B.A.</h2></div>
         </div> 
         <div id="twoSectionsWide">
-            <div id="history"  class="blue">
+            <div id="history"  class="white">
                 <h2>History Department</h2>
                 <div class="twoWide--title"><img data-p="5" role="button" src="/HC-DavidNaumec.webp" alt="Picture of David Naumec" height="500" width="500"><h2>David Naumec, Ph.D.</h2></div>
                 <div class="twoWide--title"><img data-p="6" role="button" src="/HC-NitaVitaliano.webp" alt="Picture of Nita Vitaliano" height="500" width="500"><h2>Nita Vitaliano, M.A.</h2></div>
             </div>
             <div id="divContain2" class="blue"><div id="divider2"></div></div>     
-            <div id="lab" class="blue">
+            <div id="lab" class="white">
                 <h2>Laboratory Department</h2>
                 <div class="twoWide--title"><img data-p="11" role="button" src="/HC-SusannahGoeters.webp" alt="Picture of Susannah Goeters, B.A." height="500" width="500"><h2>Susannah Goeters, B.A.</h2></div>
                 <div class="twoWide--title"><img data-p="12" role="button" src="/HC-EricaLang.webp" alt="Picture of Erica Lang, B.A." height="500" width="500"><h2>Erica Lang, M.A.</h2></div>
             </div>
-             <div id="geo" class="white">
+             <div id="geo" class="blue">
                 <h2>Geophysical Department</h2>
                 <div class="twoWide--title"><img data-p="14" role="button" src="/HC-ColePeterson.webp" alt="Picture of Cole Peterson" height="500" width="500"><h2>Cole Peterson</h2></div>
                 <div class="twoWide--title"><img data-p="17" role="button" src="/HC-FionaJones.webp" alt="Picture of Fiona Jones" height="500" width="500"><h2>Fiona Jones</h2></div>
             </div>
-            <div id="divContain1" class="white">
+            <div id="divContain1" class="blue">
                 <div id="divider1"></div>
              </div>  
+             <div id="" class="blue empty"></div>
         </div> 
     </section>
 </Layout>
@@ -231,7 +233,7 @@ import Layout from '../layouts/Layout.astro';
         width: 100%;
     }
 
-    #projectManagers , #gis , #arch{
+    #projectManagers , #gis , #arch, #SRprojectManagers{
         display: grid;
         grid-template-columns: repeat(3 , 1fr);
         column-gap: 32px;
@@ -243,7 +245,11 @@ import Layout from '../layouts/Layout.astro';
         justify-items: center;
     }
 
-    #projectManagers > h2 ,  #gis > h2 , #operations > h2 , #arch > h2{
+    #projectManagers , #SRprojectManagers{
+        grid-template-columns: repeat(2 , 1fr);
+    }
+
+    #projectManagers > h2 ,  #gis > h2 , #operations > h2 , #arch > h2 , #SRprojectManagers > h2{
         padding: 16px 32px 16px 10%;
         text-align: center;
         position: absolute;
@@ -305,7 +311,10 @@ import Layout from '../layouts/Layout.astro';
         align-self: center;
         background-color: #0063A7;
     }
-    #twoSectionsWide > #divContain2 > #divider2 {
+    #twoSectionsWide > #divContain2  {
+        background-color: #fff;
+    }
+    #twoSectionsWide > #divContain1 > #divider1 {
         background-color: #fff;
     }
     #twoSectionsWide > div > h2 {
@@ -353,6 +362,9 @@ import Layout from '../layouts/Layout.astro';
     }
 
     @media only screen and (max-width: 1300px) { 
+        .empty{
+            display: none !important;
+        }
         .leadership--title > h2 {
             font-size: 1.4rem;
         }
@@ -402,7 +414,7 @@ import Layout from '../layouts/Layout.astro';
         .leadership--bio:nth-of-type(2){
             grid-row-start: 4;
         }
-        #projectManagers , #gis , #arch {
+        #projectManagers , #gis , #arch , #SRprojectManagers {
             grid-template-columns: 1fr 1fr;
             row-gap: 48px;
         }
@@ -414,11 +426,11 @@ import Layout from '../layouts/Layout.astro';
         }
     }
     @media only screen and (max-width: 500px) { 
-        #projectManagers , #gis , #arch{
+        #projectManagers , #gis , #arch , #SRprojectManagers{
             grid-template-columns: 1fr;
             row-gap: 24px;
         }
-        #projectManagers > h2 , #gis > h2 , #arch > h2 , #operations > h2{
+        #projectManagers > h2 , #gis > h2 , #arch > h2 , #operations > h2 , #SRprojectManagers > h2{
             font-size: 1.4rem;
         }
         #twoSectionsWide {
