Stephanie Scialo title

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -55,7 +55,7 @@ import Layout from '../layouts/Layout.astro';
         </div>
         <div id="arch"  class="white">
             <h2>Project Archaeologists</h2>
-            <div class="managers--title"><img data-p="7" role="button" src="/HC-StephanieScialo.webp" alt="Picture of Stephanie Scialo, M.A." height="500" width="500"><h2>Stephanie Scialo, B.A.</h2></div>
+            <div class="managers--title"><img data-p="7" role="button" src="/HC-StephanieScialo.webp" alt="Picture of Stephanie Scialo, M.A." height="500" width="500"><h2>Stephanie Scialo, M.A.</h2></div>
             <div class="managers--title"><img data-p="3" role="button" src="/SamanthaLee.webp" alt="Picture of Samantha Lee, Ph.D." height="500" width="500"><h2>Samantha Lee, Ph.D.</h2></div>
             <div class="managers--title"><img data-p="12" role="button" src="/HC-EricaLang.webp" alt="Picture of Erica Lang, M.A." height="500" width="500"><h2>Erica Lang, M.A.</h2></div>
         </div> 
