Correct name misspelling

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -51,7 +51,7 @@ import Layout from '../layouts/Layout.astro';
         </div> 
         <div id="operations" class="blue">
             <h2>Operations Manager</h2>
-            <div class="managers--title"><img data-p="16" role="button" src="/HC-SamSpitzchuh.webp" alt="Picture of Sam Spitschuh, B.A." height="500" width="500"><h2>Sam Spitschuh, B.A.</h2></div>
+            <div class="managers--title"><img data-p="16" role="button" src="/HC-SamSpitzchuh.webp" alt="Picture of Sam Spitzschuh, B.A." height="500" width="500"><h2>Sam Spitzschuh, B.A.</h2></div>
         </div>
         <div id="arch"  class="white">
             <h2>Project Archaeologists</h2>
