fixed blog linking problem

--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -45,7 +45,7 @@ const {page} = Astro.props;
                     title={post.title} 
                     desc={post.description}
                     image={'https://' + post.imageURL}
-                    href={`./${post.slug}`}
+                    href={`https://heritage-consultants.com/news/${post.slug}`}
                     tag={post.type}
                     type={post.type.replace(/\s/g, '')}
                     date={post.date}
@@ -54,7 +54,7 @@ const {page} = Astro.props;
                     title={post.title} 
                     desc={post.description}
                     image={'https://' + post.imageURL}
-                    href={`./${post.slug}`}
+                    href={`https://heritage-consultants.com/news/${post.slug}`}
                     tag={post.type}
                     type={post.type.replace(/\s/g, '')}
                     date={post.date}
