--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,9 @@
 import { Icon } from 'astro-icon';
 ---
 <footer>
-    <a href="tel:860-299-6328" aria-label="Call us at 860-299-6328"><Icon pack="feather" name="phone"/> 860.299.6328</a>
+    <div class="phone">
+        <a href="tel:860-259-5710" aria-label="Call us at 860-259-5710"><Icon pack="feather" name="phone"/> 860.259.5710</a>&nbsp;|&nbsp;<a href="tel:860-299-6328" aria-label="Call us at 860-299-6328"><Icon pack="feather" name="phone"/> 860.299.6328</a>
+    </div>
     <a href="mailto:DGEORGE@HERITAGE-CONSULTANTS.COM" aria-label="email us at DGEORGE@HERITAGE-CONSULTANTS.COM"><Icon pack="feather" name="mail"/> DGEORGE@HERITAGE-CONSULTANTS.COM</a>
     <a href="geo:41.6279307,-72.74313" target="_blank" aria-label="visit us at 830 BERLIN TPKE, BERLIN, CT 06037"><Icon pack="feather" name="map-pin"/> 830 BERLIN TPKE, BERLIN, CT 06037</a>
     <div class="social">
@@ -29,19 +31,29 @@ import { Icon } from 'astro-icon';
         color:#0063A7;
         padding:64px 0 40px 0;
     }
-    footer > a {
+    footer > a , footer > .phone > a {
         text-decoration: none;
         color: #0063A7;
         font-size: 1.2rem;
         margin-bottom:16px;
         transition: color .2s ease;
     }
-
-    footer > a >  [astro-icon] {
+    footer > .phone{
+        margin-bottom:16px;
+    }
+    footer > a >  [astro-icon] , footer > .phone > a >  [astro-icon] {
         height: 16px;
         margin-right:.6rem;
         margin-left:0;
     }
+
+   footer > .phone> a:first-child {
+        margin-right:8px;
+    }
+    footer > .phone> a:last-child {
+        margin-left:8px;
+    }
+
     .social {
         display: flex;
         max-width: fit-content;
@@ -51,14 +63,17 @@ import { Icon } from 'astro-icon';
         transition: color .2s ease;
     }
 
-    footer > a:hover , .social > a:hover , footer > a:hover > [astro-icon], .social > a:hover > [astro-icon]{
+    footer > a:hover, footer > .phone > a:hover , .social > a:hover , footer > a:hover > [astro-icon], .social > a:hover > [astro-icon]{
         color:  #004575
     } 
 
     @media only screen and (max-width: 700px) { 
-        footer > a {
+        footer > a , footer > .phone > .a , footer > .phone {
             font-size: 1rem;
             margin-bottom:24px;
+        }
+        footer{
+            padding:56px 0px 40px 0px;
         }
 
     }
